--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Lab 1</title>
+  <meta name=“viewport” content=“width=device-width, initial-scale=1”>
   <!-- TODO: Add a meta tag to properly set the viewport and initial scale -->
 
   <link rel="stylesheet" href="vendor/styles/normalize.css">
@@ -23,6 +24,7 @@
     </section>
     <nav class="main-nav">
       <!-- TODO: Add a hamburger menu icon here. -->
+      <div class="icon-menu"></div>
 
       <ul>
         <li class="tab" data-content="articles"><a href="#" class="icon-home"> Home</a></li>
